--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -21,10 +21,12 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\OneDrive\Desktop\Useful Program Libraries\C++\glad.c" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicShader.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\shader.frag" />
@@ -32,6 +34,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LearnOpenGL.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\orb_man.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
