--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicShader.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
