--- a/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="..\..\..\OneDrive\Desktop\Useful Program Libraries\C++\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Application.cpp">
+    <ClCompile Include="BasicsMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LightingMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -42,6 +45,10 @@
   <ItemGroup>
     <None Include="shaders\shader.vert" />
     <None Include="shaders\shader.frag" />
+    <None Include="shaders\lightSourceShader.vert" />
+    <None Include="shaders\lightSourceShader.frag" />
+    <None Include="shaders\lightingShader.frag" />
+    <None Include="shaders\lightingShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LearnOpenGL.rc">
