--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -31,10 +31,10 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\lightingShader.frag" />
-    <None Include="shaders\lightingShader.vert" />
-    <None Include="shaders\lightSourceShader.frag" />
-    <None Include="shaders\lightSourceShader.vert" />
+    <None Include="shaders\objectShader.frag" />
+    <None Include="shaders\objectShader.vert" />
+    <None Include="shaders\lampShader.frag" />
+    <None Include="shaders\lampShader.vert" />
     <None Include="shaders\shader.frag" />
     <None Include="shaders\shader.vert" />
   </ItemGroup>
